[gd_scene load_steps=15 format=3 uid="uid://2gsuh1kyuipl"]

[ext_resource type="Script" path="res://User Interface/UI_menus/Menu.gd" id="1_i4i88"]
[ext_resource type="Texture2D" uid="uid://bqhq5upn518vt" path="res://Parallax/bg0.png" id="2_0gssu"]
[ext_resource type="Texture2D" uid="uid://de7ahrckvdrf4" path="res://Parallax/skybg.png" id="2_no1h3"]
[ext_resource type="Shader" path="res://Misc/pixel.gdshader" id="2_vu6x2"]
[ext_resource type="Texture2D" uid="uid://ctj7buktwyi8s" path="res://Parallax/bg1.png" id="3_oofks"]
[ext_resource type="Texture2D" uid="uid://dyq3qagtcjytv" path="res://Parallax/bg2.png" id="4_6mrbk"]
[ext_resource type="Texture2D" uid="uid://bcvje32iymegi" path="res://Parallax/bg3.png" id="5_gypor"]
[ext_resource type="FontFile" uid="uid://cqia8tbmpi3ec" path="res://Misc/ChiKareGo2.ttf" id="8_qx75b"]
[ext_resource type="PackedScene" uid="uid://1gct8vkdfl7a" path="res://volume_slider.tscn" id="9_jjw07"]
[ext_resource type="Theme" uid="uid://dap64i2o0ns0x" path="res://Misc/Theme.tres" id="9_p51c5"]
[ext_resource type="AudioStream" uid="uid://d4ib2wmobssvo" path="res://Audio/startSound.mp3" id="12_tav4u"]
[ext_resource type="AudioStream" uid="uid://ca2uysq0dlhmw" path="res://Audio/selectSound.mp3" id="13_rtylw"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5hykk"]
shader = ExtResource("2_vu6x2")
shader_parameter/size_x = 0.001
shader_parameter/size_y = 0.015

[sub_resource type="GDScript" id="GDScript_1o5ty"]
script/source = "extends ParallaxBackground

@export var scrolling_speed = 250
# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	scroll_offset.x -= scrolling_speed*delta
"

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i4i88")

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
material = SubResource("ShaderMaterial_5hykk")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = SubResource("GDScript_1o5ty")

[node name="Background" type="Sprite2D" parent="ParallaxBackground"]
position = Vector2(960, 540)
scale = Vector2(6.531, 6.75)
texture = ExtResource("2_no1h3")

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.3, 0.3)
motion_mirroring = Vector2(1920, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(960, 540)
scale = Vector2(6.53061, 6.75)
texture = ExtResource("2_0gssu")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.5, 0.5)
motion_mirroring = Vector2(1920, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2(960, 540)
scale = Vector2(6.531, 6.75)
texture = ExtResource("3_oofks")

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.7, 0.7)
motion_mirroring = Vector2(1920, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer3"]
position = Vector2(960, 540)
scale = Vector2(6.531, 6.75)
texture = ExtResource("4_6mrbk")

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(1920, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer4"]
position = Vector2(960, 540)
scale = Vector2(6.531, 6.75)
texture = ExtResource("5_gypor")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 2
offset_left = 296.0
offset_top = 328.0
offset_right = 1621.0
offset_bottom = 429.0

[node name="Label" type="Label" parent="CenterContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("8_qx75b")
theme_override_font_sizes/font_size = 100
text = "Pebbles Goes To Penguin Prison"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 456.0
offset_top = 469.0
offset_right = 956.0
offset_bottom = 588.0
scale = Vector2(2, 2)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("9_p51c5")
theme_override_constants/outline_size = 3
text = "Play"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("9_p51c5")
theme_override_constants/outline_size = 3
text = "Options"

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("9_p51c5")
theme_override_constants/outline_size = 3
text = "Exit"

[node name="Option" type="Control" parent="."]
visible = false
layout_mode = 2
anchors_preset = 0
offset_left = 456.0
offset_top = 469.0
offset_right = 956.0
offset_bottom = 588.0

[node name="CenterContainer2" type="CenterContainer" parent="Option"]
layout_mode = 0
offset_left = -160.0
offset_top = -141.0
offset_right = 1165.0
offset_bottom = -40.0

[node name="Label" type="Label" parent="Option/CenterContainer2"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("8_qx75b")
theme_override_font_sizes/font_size = 100
text = "Options"

[node name="MarginContainer2" type="MarginContainer" parent="Option"]
layout_mode = 0
offset_right = 500.0
offset_bottom = 119.0
scale = Vector2(2, 2)

[node name="VBoxContainer" type="VBoxContainer" parent="Option/MarginContainer2"]
layout_mode = 2

[node name="Volume" type="Button" parent="Option/MarginContainer2/VBoxContainer"]
layout_mode = 2
theme = ExtResource("9_p51c5")
theme_override_constants/outline_size = 3
text = "Volume"

[node name="Back" type="Button" parent="Option/MarginContainer2/VBoxContainer"]
layout_mode = 2
theme = ExtResource("9_p51c5")
theme_override_constants/outline_size = 3
text = "Back	"

[node name="Volume" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CenterContainer2" type="CenterContainer" parent="Volume"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 780.0
offset_top = 308.0
offset_right = 1080.0
offset_bottom = 405.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Volume/CenterContainer2"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("8_qx75b")
theme_override_font_sizes/font_size = 100
text = "Volume"

[node name="MarginContainer" type="MarginContainer" parent="Volume"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 740.0
offset_top = 406.0
offset_right = 1040.0
offset_bottom = 601.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.34259, 1.37415)

[node name="VBoxContainer" type="VBoxContainer" parent="Volume/MarginContainer"]
layout_mode = 2

[node name="master_vol" type="Label" parent="Volume/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("9_p51c5")
theme_override_constants/outline_size = 2
text = "Master"

[node name="master_slider" parent="Volume/MarginContainer/VBoxContainer" instance=ExtResource("9_jjw07")]
layout_mode = 2
bus_name = "Master"

[node name="background_vol" type="Label" parent="Volume/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("9_p51c5")
theme_override_constants/outline_size = 2
text = "Background"

[node name="background_slider" parent="Volume/MarginContainer/VBoxContainer" instance=ExtResource("9_jjw07")]
layout_mode = 2
bus_name = "Background"

[node name="soundeffects_vol" type="Label" parent="Volume/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("9_p51c5")
theme_override_constants/outline_size = 2
text = "Sound Effects"

[node name="soundeffects_slider" parent="Volume/MarginContainer/VBoxContainer" instance=ExtResource("9_jjw07")]
layout_mode = 2
bus_name = "Sound Effects"

[node name="HSeparator" type="HSeparator" parent="Volume/MarginContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Back" type="Button" parent="Volume/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("9_p51c5")
theme_override_constants/outline_size = 2
text = "Back
"

[node name="SaveSlot" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CenterContainer2" type="CenterContainer" parent="SaveSlot"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 576.5
offset_top = 308.0
offset_right = 1283.5
offset_bottom = 405.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="SaveSlot/CenterContainer2"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("8_qx75b")
theme_override_font_sizes/font_size = 100
text = "Choose Save Slot"

[node name="MarginContainer" type="MarginContainer" parent="SaveSlot"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 578.0
offset_top = 457.0
offset_right = 1097.0
offset_bottom = 632.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.34259, 1.37415)

[node name="VBoxContainer" type="VBoxContainer" parent="SaveSlot/MarginContainer"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="SaveSlot/MarginContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="SaveSlot1" type="Button" parent="SaveSlot/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("9_p51c5")
theme_override_constants/outline_size = 2
text = "Save Slot 1
"

[node name="SaveSlot2" type="Button" parent="SaveSlot/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("9_p51c5")
theme_override_constants/outline_size = 2
text = "Save Slot 2
"

[node name="SaveSlot3" type="Button" parent="SaveSlot/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("9_p51c5")
theme_override_constants/outline_size = 2
text = "Save Slot 3
"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_tav4u")
volume_db = -6.0
autoplay = true

[node name="selectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_rtylw")

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Option/MarginContainer2/VBoxContainer/Volume" to="." method="_on_volume_pressed"]
[connection signal="pressed" from="Option/MarginContainer2/VBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Volume/MarginContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="SaveSlot/MarginContainer/VBoxContainer/SaveSlot1" to="." method="_on_save_slot_1_pressed"]
[connection signal="pressed" from="SaveSlot/MarginContainer/VBoxContainer/SaveSlot2" to="." method="_on_save_slot_2_pressed"]
[connection signal="pressed" from="SaveSlot/MarginContainer/VBoxContainer/SaveSlot3" to="." method="_on_save_slot_3_pressed"]
